# Image-Processing

./: CMakeLists.txt  README.md
include/: videoProcessor.h  video_processor.h
src/: main.cpp  videoProcessor.cpp  videoProcessorOperations.cpp  video_processor.cpp  video_processor_operations.cpp
